syntax = "proto3";

package calculator;

option go_package = "github.com/ftilie/go-grpc-servers/calculator/proto";

message SquareRootRequest {
    int32 number = 1;
}

message SquareRootResponse {
    double result = 1;
}
